--- a/Decision_Tree.ipynb
+++ b/Decision_Tree.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "Decision Tree.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "authorship_tag": "ABX9TyOfYoAy8rYlE6Cry054wGWv",
       "include_colab_link": true
     },
