--- a/Tweet_Emotion_Recognition_using_TensorFlow.ipynb
+++ b/Tweet_Emotion_Recognition_using_TensorFlow.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "name": "Tweet Emotion Recognition using TensorFlow.ipynb",
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyNXaVDpNGQ5tHMAtfdYR89Q",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -2755,6 +2757,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/anarghyakinila88/ML-Internship/blob/main/Tweet_Emotion_Recognition_using_TensorFlow.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 1,
