--- a/IMDB_sentiment_analysis.ipynb
+++ b/IMDB_sentiment_analysis.ipynb
@@ -3,10 +3,11 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "IMDB_sentiment_analysis_final",
+      "name": "IMDB_sentiment_analysis.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -17,10 +18,20 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/anarghyakinila88/ML-Internship/blob/main/IMDB_sentiment_analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "-hLdF1oit06A"
       },
       "source": [
-        "# Sentiment analysis of IMDB reviews\r\n",
+        "# Sentiment analysis of IMDB reviews\n",
         "We will start by importing the necessary libraries"
       ]
     },
@@ -30,10 +41,10 @@
         "id": "DzJqzHv-LceW"
       },
       "source": [
-        "\r\n",
+        "\n",
         "import tensorflow as tf"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -47,7 +58,7 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -56,9 +67,9 @@
         "id": "npBPD8k_PwRJ"
       },
       "source": [
-        "# Importing the data files\r\n",
-        "After importing the necessary libraries now we will read the data files we have two data files here\r\n",
-        "\r\n"
+        "# Importing the data files\n",
+        "After importing the necessary libraries now we will read the data files we have two data files here\n",
+        "\n"
       ]
     },
     {
@@ -67,10 +78,10 @@
         "id": "eOvZ5uMyOtTF"
       },
       "source": [
-        "imdb_reviews=pd.read_csv(\"/content/imdb_reviews.csv\")\r\n",
+        "imdb_reviews=pd.read_csv(\"/content/imdb_reviews.csv\")\n",
         "test_reviews=pd.read_csv(\"/content/test_reviews.csv\")"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -95,7 +106,7 @@
       "source": [
         "imdb_reviews.head()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -191,7 +202,7 @@
       "source": [
         "test_reviews.head()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -271,8 +282,8 @@
         "id": "cOfnoRhGXogV"
       },
       "source": [
-        "# Preprocessing the data\r\n",
-        "We can not pass the string data to our model directly, so we need to transform the string data into integer format.For this we can map each distinct word as a distinct integer for eg.{'this':14 , 'the':1}.We already have a file that contains the mapping from words to integers so we are going to load that file.\r\n"
+        "# Preprocessing the data\n",
+        "We can not pass the string data to our model directly, so we need to transform the string data into integer format.For this we can map each distinct word as a distinct integer for eg.{'this':14 , 'the':1}.We already have a file that contains the mapping from words to integers so we are going to load that file.\n"
       ]
     },
     {
@@ -283,7 +294,7 @@
       "source": [
         "word_index=pd.read_csv(\"/content/word_indexes.csv\")"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -308,7 +319,7 @@
       "source": [
         "word_index.head()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -399,7 +410,7 @@
       "source": [
         "word_index=dict(zip(word_index.Words,word_index.Indexes))"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -408,12 +419,12 @@
         "id": "FsScw2ilFqap"
       },
       "source": [
-        "word_index[\"<PAD>\"]=0\r\n",
-        "word_index[\"<START\"]=1\r\n",
-        "word_index[\"<UNK>\"]=2\r\n",
+        "word_index[\"<PAD>\"]=0\n",
+        "word_index[\"<START\"]=1\n",
+        "word_index[\"<UNK>\"]=2\n",
         "word_index[\"<UNUSED>\"]=3"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -431,11 +442,11 @@
         "id": "nay4o8dSAqbu"
       },
       "source": [
-        "def review_encoder(text):\r\n",
-        "  arr=[word_index[word] for word in text]\r\n",
+        "def review_encoder(text):\n",
+        "  arr=[word_index[word] for word in text]\n",
         "  return arr"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -453,10 +464,10 @@
         "id": "bUhde9eLE5H3"
       },
       "source": [
-        "train_data,train_labels=imdb_reviews['Reviews'],imdb_reviews['Sentiment']\r\n",
+        "train_data,train_labels=imdb_reviews['Reviews'],imdb_reviews['Sentiment']\n",
         "test_data, test_labels=test_reviews['Reviews'],test_reviews['Sentiment']"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -465,7 +476,7 @@
         "id": "jBWDVwCNdBJP"
       },
       "source": [
-        "Before transforming the reviews as integers we need to tokenize or split the review on the basis of whitespaces\r\n",
+        "Before transforming the reviews as integers we need to tokenize or split the review on the basis of whitespaces\n",
         "For eg.the string \"The movie was wonderful\" becomes [\"The\" , \"movie\" , \"was\" , \"wonderful\" ]."
       ]
     },
@@ -475,10 +486,10 @@
         "id": "frWCqvycL-w5"
       },
       "source": [
-        "train_data=train_data.apply(lambda review:review.split())\r\n",
+        "train_data=train_data.apply(lambda review:review.split())\n",
         "test_data=test_data.apply(lambda review:review.split())"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -496,10 +507,10 @@
         "id": "wJLwZH1OMPJM"
       },
       "source": [
-        "train_data=train_data.apply(review_encoder)\r\n",
+        "train_data=train_data.apply(review_encoder)\n",
         "test_data=test_data.apply(review_encoder)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -523,7 +534,7 @@
       "source": [
         "train_data.head()"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -559,16 +570,16 @@
         "id": "p01DiByEJ7fw"
       },
       "source": [
-        "def encode_sentiments(x):\r\n",
-        "  if x=='positive':\r\n",
-        "    return 1\r\n",
-        "  else:\r\n",
-        "    return 0\r\n",
-        "\r\n",
-        "train_labels=train_labels.apply(encode_sentiments)\r\n",
+        "def encode_sentiments(x):\n",
+        "  if x=='positive':\n",
+        "    return 1\n",
+        "  else:\n",
+        "    return 0\n",
+        "\n",
+        "train_labels=train_labels.apply(encode_sentiments)\n",
         "test_labels=test_labels.apply(encode_sentiments)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -577,39 +588,39 @@
         "id": "bPOP1mPd1mrh"
       },
       "source": [
-        "Before giving the review as an input to the model we need to perform following preprocessing steps:\r\n",
-        "\r\n",
-        " \r\n",
-        "\r\n",
-        "\r\n",
-        "*   The length of each review should be made equal for the model to be working correctly.\r\n",
-        "\r\n",
-        "*  We have chosen the length of each review to be 500. \r\n",
-        "*     If the review is longer than 500 words we are going to cut the extra part of the review.\r\n",
-        "\r\n",
-        "\r\n",
-        "*       If the review is contains less than 500 words we are going to pad the review with zeros to increase its length to 500.\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n"
+        "Before giving the review as an input to the model we need to perform following preprocessing steps:\n",
+        "\n",
+        " \n",
+        "\n",
+        "\n",
+        "*   The length of each review should be made equal for the model to be working correctly.\n",
+        "\n",
+        "*  We have chosen the length of each review to be 500. \n",
+        "*     If the review is longer than 500 words we are going to cut the extra part of the review.\n",
+        "\n",
+        "\n",
+        "*       If the review is contains less than 500 words we are going to pad the review with zeros to increase its length to 500.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -621,7 +632,7 @@
         "train_data=keras.preprocessing.sequence.pad_sequences(train_data,value=word_index[\"<PAD>\"],padding='post',maxlen=500)\n",
         "test_data=keras.preprocessing.sequence.pad_sequences(test_data,value=word_index[\"<PAD>\"],padding='post',maxlen=500)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -630,16 +641,16 @@
         "id": "EjL1Q8kG2YXV"
       },
       "source": [
-        "#Building the model\r\n",
-        "Our model is a neural network and it consits of the following layers : \r\n",
-        "\r\n",
-        "1.   one word embedding layer which creates word embeddings of length 16 from integer encoded review.\r\n",
-        "2.  second layer is global average pooling layer which is used to prevent overfitting by reducing the number of parameters.\r\n",
-        "\r\n",
-        "1.   then a dense layer which has 16 hidden units and uses relu as activation function\r\n",
-        "2.  the final layer is the output layer which uses sigmoid as activation function \r\n",
-        "\r\n",
-        "\r\n"
+        "#Building the model\n",
+        "Our model is a neural network and it consits of the following layers : \n",
+        "\n",
+        "1.   one word embedding layer which creates word embeddings of length 16 from integer encoded review.\n",
+        "2.  second layer is global average pooling layer which is used to prevent overfitting by reducing the number of parameters.\n",
+        "\n",
+        "1.   then a dense layer which has 16 hidden units and uses relu as activation function\n",
+        "2.  the final layer is the output layer which uses sigmoid as activation function \n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -653,7 +664,7 @@
         "                        keras.layers.Dense(16,activation='relu'),\n",
         "                        keras.layers.Dense(1,activation='sigmoid')])"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -662,16 +673,16 @@
         "id": "9pK_1v8v3hBZ"
       },
       "source": [
-        "#compiling the model\r\n",
-        "\r\n",
-        "\r\n",
-        "1.   Adam is used as optimization function for our model.\r\n",
-        "2.   Binary cross entropy loss function is used as loss function for the model.\r\n",
-        "\r\n",
-        "1.   Accuracy is used as the metric for evaluating the model.\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n"
+        "#compiling the model\n",
+        "\n",
+        "\n",
+        "1.   Adam is used as optimization function for our model.\n",
+        "2.   Binary cross entropy loss function is used as loss function for the model.\n",
+        "\n",
+        "1.   Accuracy is used as the metric for evaluating the model.\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -682,7 +693,7 @@
       "source": [
         "model.compile(optimizer='adam',loss='binary_crossentropy',metrics=['accuracy'])"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -704,10 +715,10 @@
         "outputId": "5dff0e7b-4544-48ac-fb87-4108ab34552b"
       },
       "source": [
-        "#training the model\r\n",
+        "#training the model\n",
         "history=model.fit(train_data,train_labels,epochs=30,batch_size=512,validation_data=(test_data,test_labels))"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -798,7 +809,7 @@
       "source": [
         "loss,accuracy=model.evaluate(test_data,test_labels)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -837,11 +848,11 @@
         "outputId": "aff57399-fb6b-426a-820b-86a143e5752f"
       },
       "source": [
-        "index=np.random.randint(1,1000)\r\n",
-        "user_review=test_reviews.loc[index]\r\n",
-        "print(user_review)\r\n"
+        "index=np.random.randint(1,1000)\n",
+        "user_review=test_reviews.loc[index]\n",
+        "print(user_review)\n"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -873,14 +884,14 @@
         "outputId": "6cc03304-d42e-4247-adcd-6f96da3c5ee1"
       },
       "source": [
-        "user_review=test_data[index]\r\n",
-        "user_review=np.array([user_review])\r\n",
-        "if (model.predict(user_review)>0.5).astype(\"int32\"):\r\n",
-        "  print(\"positive sentiment\")\r\n",
-        "else:\r\n",
-        "  print(\"negative sentiment\")\r\n"
+        "user_review=test_data[index]\n",
+        "user_review=np.array([user_review])\n",
+        "if (model.predict(user_review)>0.5).astype(\"int32\"):\n",
+        "  print(\"positive sentiment\")\n",
+        "else:\n",
+        "  print(\"negative sentiment\")\n"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
